--- a/src/main/resources/com/example/crime_management_system_gui/register.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/register.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="register" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1420.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.Control">
+<AnchorPane id="register" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1420.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.entities.Control">
     <Button layoutX="112.0" layoutY="679.0" mnemonicParsing="false" onAction="#switchToMain" opacity="0.0" prefHeight="74.0" prefWidth="298.0" text="Button">
       <cursor>
          <Cursor fx:constant="HAND" />
