--- a/src/main/resources/com/example/crime_management_system_gui/style.css
+++ b/src/main/resources/com/example/crime_management_system_gui/style.css
@@ -1,5 +1,5 @@
 #main{
-   -fx-background-image: url("photos/login2/1.png");
+   -fx-background-image: url("photos/login2/main.png");
    -fx-background-repeat: no-repeat;
    -fx-background-position: center center;
    -fx-background-size: cover;
