--- a/src/main/resources/com/example/crime_management_system_gui/report.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/report.fxml
@@ -3,54 +3,63 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="report" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0" prefWidth="1540.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.Switching">
-   <Button layoutX="174.0" layoutY="748.0" mnemonicParsing="false" onAction="#switchToMain" opacity="0.0" prefHeight="94.0" prefWidth="338.0" text="Button">
-      <cursor>
-         <Cursor fx:constant="HAND" />
-      </cursor></Button>
-   <Button layoutX="1036.0" layoutY="756.0" mnemonicParsing="false" opacity="0.0" prefHeight="101.0" prefWidth="358.0" text="Button">
-      <cursor>
-         <Cursor fx:constant="HAND" />
-      </cursor></Button>
-   <TextField layoutX="595.0" layoutY="175.0" prefHeight="62.0" prefWidth="358.0" promptText="Name">
-      <font>
-         <Font size="18.0" />
-      </font>
-      <cursor>
-         <Cursor fx:constant="TEXT" />
-      </cursor>
-   </TextField>
-   <TextField layoutX="595.0" layoutY="254.0" prefHeight="62.0" prefWidth="358.0" promptText="Phone">
-      <font>
-         <Font size="18.0" />
-      </font>
-      <cursor>
-         <Cursor fx:constant="TEXT" />
-      </cursor>
-   </TextField>
-   <TextField layoutX="597.0" layoutY="427.0" prefHeight="62.0" prefWidth="358.0">
-      <font>
-         <Font size="18.0" />
-      </font>
-      <cursor>
-         <Cursor fx:constant="TEXT" />
-      </cursor>
-   </TextField>
-   <DatePicker layoutX="596.0" layoutY="336.0" prefHeight="62.0" prefWidth="358.0" promptText="Date of report" showWeekNumbers="true">
-      <cursor>
-         <Cursor fx:constant="HAND" />
-      </cursor></DatePicker>
-   <TextArea layoutX="339.0" layoutY="505.0" prefHeight="222.0" prefWidth="908.0" promptText="Put your report here, please">
-      <font>
-         <Font size="18.0" />
-      </font>
-      <cursor>
-         <Cursor fx:constant="TEXT" />
-      </cursor>
-   </TextArea>
+<AnchorPane id="report" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0" prefWidth="1540.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.reportController">
+    <Button layoutX="174.0" layoutY="748.0" mnemonicParsing="false" onAction="#switchToMain" opacity="0.0" prefHeight="94.0" prefWidth="338.0" text="Button">
+        <cursor>
+            <Cursor fx:constant="HAND" />
+        </cursor>
+    </Button>
+    <Button layoutX="1036.0" layoutY="756.0" mnemonicParsing="false" onAction="#handleSubmit" opacity="0.0" prefHeight="101.0" prefWidth="358.0" text="Button">
+        <cursor>
+            <Cursor fx:constant="HAND" />
+        </cursor>
+    </Button>
+    <TextField fx:id="nameField" layoutX="595.0" layoutY="175.0" prefHeight="62.0" prefWidth="358.0" promptText="Name">
+        <font>
+            <Font size="18.0" />
+        </font>
+        <cursor>
+            <Cursor fx:constant="TEXT" />
+        </cursor>
+    </TextField>
+    <TextField fx:id="phoneField" layoutX="595.0" layoutY="254.0" prefHeight="62.0" prefWidth="358.0" promptText="Phone">
+        <font>
+            <Font size="18.0" />
+        </font>
+        <cursor>
+            <Cursor fx:constant="TEXT" />
+        </cursor>
+    </TextField>
+    <TextField layoutX="597.0" layoutY="427.0" prefHeight="62.0" prefWidth="358.0">
+        <font>
+            <Font size="18.0" />
+        </font>
+        <cursor>
+            <Cursor fx:constant="TEXT" />
+        </cursor>
+    </TextField>
+    <DatePicker fx:id="datePicker" layoutX="596.0" layoutY="336.0" prefHeight="62.0" prefWidth="358.0" promptText="Date of report" showWeekNumbers="true">
+        <cursor>
+            <Cursor fx:constant="HAND" />
+        </cursor>
+    </DatePicker>
+    <TextArea fx:id="descriptionArea" layoutX="339.0" layoutY="505.0" prefHeight="222.0" prefWidth="908.0" promptText="Put your report here, please">
+        <font>
+            <Font size="18.0" />
+        </font>
+        <cursor>
+            <Cursor fx:constant="TEXT" />
+        </cursor>
+    </TextArea>
+    <Label fx:id="messageLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="607.0" layoutY="748.0" prefHeight="62.0" prefWidth="338.0">
+        <font>
+            <Font size="18.0" />
+        </font>
+    </Label>
 </AnchorPane>
