--- a/src/main/resources/com/example/crime_management_system_gui/report.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/report.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
@@ -36,14 +37,6 @@
             <Cursor fx:constant="TEXT" />
         </cursor>
     </TextField>
-    <TextField layoutX="597.0" layoutY="427.0" prefHeight="62.0" prefWidth="358.0">
-        <font>
-            <Font size="18.0" />
-        </font>
-        <cursor>
-            <Cursor fx:constant="TEXT" />
-        </cursor>
-    </TextField>
     <DatePicker fx:id="datePicker" layoutX="596.0" layoutY="336.0" prefHeight="62.0" prefWidth="358.0" promptText="Date of report" showWeekNumbers="true">
         <cursor>
             <Cursor fx:constant="HAND" />
@@ -62,4 +55,5 @@
             <Font size="18.0" />
         </font>
     </Label>
+   <ComboBox fx:id="crimeType" layoutX="595.0" layoutY="420.0" prefHeight="62.0" prefWidth="358.0" />
 </AnchorPane>
