--- a/src/main/resources/com/example/crime_management_system_gui/police_chief.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/police_chief.fxml
@@ -1,10 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0" prefWidth="1540.0" xmlns="http://javafx.com/javafx/17.0.6" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.PoliceChief">
-    <Button layoutX="283.0" layoutY="238.0" mnemonicParsing="false" onAction="#createDepartment" prefHeight="221.0" prefWidth="303.0" text="create department" />
-    <Button layoutX="283.0" layoutY="482.0" mnemonicParsing="false" onAction="#switchToMain" prefHeight="221.0" prefWidth="303.0" text="logout" />
-    <Button layoutX="603.0" layoutY="349.0" mnemonicParsing="false" onAction="#viewProfile" prefHeight="194.0" prefWidth="276.0" text="view profile" />
+<AnchorPane id="policeChief" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0" prefWidth="1540.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.PoliceChief">
+    <Button layoutX="297.0" layoutY="660.0" mnemonicParsing="false" onAction="#createDepartment" opacity="0.0" prefHeight="68.0" prefWidth="276.0" text="create department">
+      <cursor>
+         <Cursor fx:constant="HAND" />
+      </cursor></Button>
+    <Button layoutX="1404.0" layoutY="14.0" mnemonicParsing="false" onAction="#switchToMain" opacity="0.0" prefHeight="42.0" prefWidth="94.0" text="logout">
+      <cursor>
+         <Cursor fx:constant="HAND" />
+      </cursor></Button>
+    <Button layoutX="932.0" layoutY="285.0" mnemonicParsing="false" onAction="#viewOfficer" opacity="0.0" prefHeight="68.0" prefWidth="276.0" text="view profile">
+      <cursor>
+         <Cursor fx:constant="HAND" />
+      </cursor></Button>
+   <Button layoutX="297.0" layoutY="284.0" mnemonicParsing="false" onAction="#assignOfficer" opacity="0.0" prefHeight="68.0" prefWidth="276.0" text="view profile">
+      <cursor>
+         <Cursor fx:constant="HAND" />
+      </cursor>
+   </Button>
+   <Button layoutX="296.0" layoutY="466.0" mnemonicParsing="false" onAction="#addCriminal" opacity="0.0" prefHeight="68.0" prefWidth="276.0" text="view profile">
+      <cursor>
+         <Cursor fx:constant="HAND" />
+      </cursor>
+   </Button>
+   <Button layoutX="936.0" layoutY="467.0" mnemonicParsing="false" onAction="#viewCriminal" opacity="0.0" prefHeight="68.0" prefWidth="276.0" text="view profile">
+      <cursor>
+         <Cursor fx:constant="HAND" />
+      </cursor>
+   </Button>
+   <Button layoutX="935.0" layoutY="656.0" mnemonicParsing="false" onAction="#viewDepartment" opacity="0.0" prefHeight="68.0" prefWidth="276.0" text="view profile">
+      <cursor>
+         <Cursor fx:constant="HAND" />
+      </cursor>
+   </Button>
 </AnchorPane>
