--- a/src/main/resources/com/example/crime_management_system_gui/style.css
+++ b/src/main/resources/com/example/crime_management_system_gui/style.css
@@ -40,8 +40,22 @@
    -fx-background-size: cover;
 }
 
+#policeChief{
+   -fx-background-image: url("photos/chief.png");
+   -fx-background-repeat: no-repeat;
+   -fx-background-position: center center;
+   -fx-background-size: cover;
+}
+
 #policeProfile{
    -fx-background-image: url("photos/officer_profile.png");
+   -fx-background-repeat: no-repeat;
+   -fx-background-position: center center;
+   -fx-background-size: cover;
+}
+
+#viewOfficer{
+   -fx-background-image: url("photos/view_officer.png");
    -fx-background-repeat: no-repeat;
    -fx-background-position: center center;
    -fx-background-size: cover;
@@ -52,5 +66,4 @@
    -fx-border-color: green;
    -fx-border-width: 2px;
    -fx-background-color: transparent;
-
 }
