--- a/src/main/resources/com/example/crime_management_system_gui/create_department.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/create_department.fxml
@@ -12,5 +12,5 @@
     <DatePicker fx:id="datePicker" layoutX="377.0" layoutY="356.0" promptText="Date of activation" />
     <Label fx:id="message" layoutX="450.0" layoutY="447.0" text="Label" />
     <Button layoutX="438.0" layoutY="521.0" mnemonicParsing="false" onAction="#createDepartment" text="create" />
-   <Button layoutX="430.0" layoutY="567.0" mnemonicParsing="false" onAction="#back" text="back" />
+   <Button layoutX="430.0" layoutY="567.0" mnemonicParsing="false" onAction="#backToPoliceChief" text="back" />
 </AnchorPane>
