--- a/src/main/resources/com/example/crime_management_system_gui/view_officer.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/view_officer.fxml
@@ -1,22 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane id="viewOfficer" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0" prefWidth="1540.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.viewOfficers">
-    <Button layoutX="196.0" layoutY="429.0" mnemonicParsing="false" onAction="#viewUserData" text="show" />
-    <Label fx:id="username" alignment="CENTER" layoutX="319.0" layoutY="291.0" prefHeight="64.0" prefWidth="398.0" text="Name">
+    <Button focusTraversable="false" layoutX="750.0" layoutY="689.0" mnemonicParsing="false" onAction="#viewUserData" opacity="0.0" prefHeight="54.0" prefWidth="211.0" text="show">
+      <cursor>
+         <Cursor fx:constant="HAND" />
+      </cursor></Button>
+    <Label fx:id="username" alignment="CENTER" focusTraversable="false" layoutX="313.0" layoutY="256.0" prefHeight="64.0" prefWidth="371.0">
       <font>
          <Font size="24.0" />
       </font></Label>
-    <TextField fx:id="id" alignment="CENTER" layoutX="571.0" layoutY="183.0" prefHeight="64.0" prefWidth="398.0" promptText="ID">
+    <TextField fx:id="id" alignment="CENTER" focusTraversable="false" layoutX="571.0" layoutY="182.0" prefHeight="64.0" prefWidth="398.0" promptText="ID">
       <font>
          <Font size="24.0" />
-      </font></TextField>
-   <Button layoutX="192.0" layoutY="395.0" mnemonicParsing="false" onAction="#rateUser" text="rate" />
-   <ChoiceBox fx:id="rating" layoutX="149.0" layoutY="345.0" prefWidth="150.0" />
+      </font>
+      <cursor>
+         <Cursor fx:constant="TEXT" />
+      </cursor></TextField>
+   <Button focusTraversable="false" layoutX="1149.0" layoutY="626.0" mnemonicParsing="false" onAction="#rateUser" opacity="0.0" prefHeight="54.0" prefWidth="211.0" text="rate">
+      <cursor>
+         <Cursor fx:constant="HAND" />
+      </cursor></Button>
+   <Label fx:id="phone" alignment="CENTER" focusTraversable="false" layoutX="1056.0" layoutY="256.0" prefHeight="64.0" prefWidth="371.0">
+      <font>
+         <Font size="24.0" />
+      </font>
+   </Label>
+   <Label fx:id="rate" alignment="CENTER" focusTraversable="false" layoutX="1056.0" layoutY="329.0" prefHeight="64.0" prefWidth="371.0">
+      <font>
+         <Font size="24.0" />
+      </font>
+   </Label>
+   <ComboBox fx:id="rating" focusTraversable="false" layoutX="311.0" layoutY="621.0" prefHeight="64.0" prefWidth="364.0" promptText="None">
+      <cursor>
+         <Cursor fx:constant="HAND" />
+      </cursor>
+   </ComboBox>
+   <Button focusTraversable="false" layoutX="45.0" layoutY="13.0" mnemonicParsing="false" onAction="#backToPoliceChief" opacity="0.0" prefHeight="38.0" prefWidth="55.0" text="Button">
+      <cursor>
+         <Cursor fx:constant="HAND" />
+      </cursor>
+   </Button>
 </AnchorPane>
