--- a/src/main/resources/com/example/crime_management_system_gui/register.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/register.fxml
@@ -2,11 +2,10 @@
 
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -21,50 +20,38 @@
             <Cursor fx:constant="HAND" />
         </cursor>
     </Button>
-    <TextField fx:id="username" layoutX="564.0" layoutY="183.0" prefHeight="57.0" prefWidth="326.0" promptText="Username">
+    <TextField fx:id="username" layoutX="564.0" layoutY="189.0" prefHeight="57.0" prefWidth="326.0" promptText="Username">
         <font>
             <Font size="24.0" />
         </font>
     </TextField>
-    <TextField fx:id="id" layoutX="564.0" layoutY="250.0" prefHeight="58.0" prefWidth="326.0" promptText="ID">
+    <TextField fx:id="id" layoutX="564.0" layoutY="256.0" prefHeight="58.0" prefWidth="326.0" promptText="ID">
         <font>
             <Font size="24.0" />
         </font>
     </TextField>
-    <TextField fx:id="phone" layoutX="564.0" layoutY="366.0" prefHeight="58.0" prefWidth="326.0" promptText="Phone">
-        <font>
-            <Font size="24.0" />
-        </font>
-    </TextField>
-    <RadioButton fx:id="female" graphicTextGap="58.0" layoutX="604.0" layoutY="326.0" mnemonicParsing="false" prefHeight="0.0" prefWidth="79.0" scaleX="2.0" scaleY="2.0" text="Female" textFill="WHITE">
-        <cursor>
-            <Cursor fx:constant="HAND" />
-        </cursor>
-        <toggleGroup>
-            <ToggleGroup />
-        </toggleGroup>
-    </RadioButton>
-    <RadioButton fx:id="male" layoutX="800.0" layoutY="326.0" mnemonicParsing="false" prefHeight="0.0" prefWidth="48.0" scaleX="2.0" scaleY="2.0" text="Male" textFill="WHITE">
-      <cursor>
-         <Cursor fx:constant="HAND" />
-      </cursor></RadioButton>
     <Label fx:id="message" alignment="CENTER" layoutX="438.0" layoutY="689.0" prefHeight="74.0" prefWidth="578.0">
         <font>
             <Font size="24.0" />
         </font>
     </Label>
-    <PasswordField fx:id="password" layoutX="563.0" layoutY="500.0" prefHeight="58.0" prefWidth="326.0" promptText="Password">
+    <PasswordField fx:id="password" layoutX="563.0" layoutY="462.0" prefHeight="58.0" prefWidth="326.0" promptText="Password">
         <font>
             <Font size="24.0" />
         </font>
     </PasswordField>
-    <PasswordField fx:id="confirmPassword" layoutX="564.0" layoutY="568.0" prefHeight="58.0" prefWidth="326.0" promptText="Confirm Password">
+    <PasswordField fx:id="confirmPassword" layoutX="564.0" layoutY="532.0" prefHeight="58.0" prefWidth="326.0" promptText="Confirm Password">
         <font>
             <Font size="24.0" />
         </font>
     </PasswordField>
-   <TextField fx:id="salary" layoutX="564.0" layoutY="433.0" prefHeight="58.0" prefWidth="326.0" promptText="Salary">
+   <TextField fx:id="salary" layoutX="564.0" layoutY="394.0" prefHeight="58.0" prefWidth="326.0" promptText="Salary">
       <font>
          <Font size="24.0" />
       </font></TextField>
+   <ComboBox fx:id="rank" layoutX="564.0" layoutY="326.0" prefHeight="58.0" prefWidth="326.0" promptText="None">
+      <cursor>
+         <Cursor fx:constant="HAND" />
+      </cursor>
+   </ComboBox>
 </AnchorPane>
